# routes/userRoutes.js
@@ -6,6 +6,7 @@ router.get('/', controller.getAllUsers);
 router.get('/:id', controller.getSingleUser);
 router.post('/', controller.createUser);
 router.put('/:id', controller.updateUser);
+router.put('/upgrade/:id', controller.updateUsersAccessLevel);
 router.delete('/:id', controller.deleteUser);
 
 module.exports = router;
